apps/ai/ollama.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: ollama
  ports:
    - name: ollama
      port: 11434

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
spec:
  replicas: 1
  serviceName: ollama
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: "docker.io/ollama/ollama:0.6.4"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: data
              mountPath: /data
      securityContext:
        runAsNonRoot: true
        runAsUser: 170553
        runAsGroup: 170553
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
