apps/ai/open-webui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: open-webui
  ports:
    - name: web
      port: 8080

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
spec:
  replicas: 1
  serviceName: open-webui
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: "ghcr.io/open-webui/open-webui:v0.6.0"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
      securityContext:
        runAsNonRoot: true
        runAsUser: 172033
        runAsGroup: 172033
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
